# Cocos2d-x_WIN64

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  build_linux_win32_win64.yml  readme.md
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
proj.win32/: DroneSimulator.sln
